add: team logo images

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
             </div>
         </nav>
     </header>
+    <section id="main-section">
+        <img class="img-fluid logo" src="assets/images/arsenal-logo.webp" alt="Arsenal football team logo" id="arsenal-logo">
+        <img class="img-fluid logo" src="assets/images/spurs-logo.webp" alt="Tottenham Hotspurs team logo" id="spurs-logo">
+    </section>
 
     <!-- Bootstrap Script Tag -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
