add: main heading and quiz button

--- a/index.html
+++ b/index.html
@@ -46,8 +46,30 @@
         </nav>
     </header>
     <section id="main-section">
-        <img class="img-fluid logo" src="assets/images/arsenal-logo.webp" alt="Arsenal football team logo" id="arsenal-logo">
-        <img class="img-fluid logo" src="assets/images/spurs-logo.webp" alt="Tottenham Hotspurs team logo" id="spurs-logo">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-3"></div>
+                <div class="col-3">
+                <img class="img-fluid logo" src="assets/images/arsenal-logo.webp" alt="Arsenal football team logo" id="arsenal-logo">
+                </div>
+                <div class="col-3">
+                <img class="img-fluid logo" src="assets/images/spurs-logo.webp" alt="Tottenham Hotspurs team logo" id="spurs-logo">
+                </div>
+                <div class="col-3"></div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <h1>Derby Duel</h1>
+                    <p>So you think you know everything there is</p>
+                    <p>to know about the North London Derby?</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+                    <button type="button" class="btn btn-primary">Take Quiz</button>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- Bootstrap Script Tag -->
