style: website colors added to main section

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </header>
     <section id="main-section">
         <div class="container-fluid">
-            <div class="row">
+            <div class="row logo-row text-center">
                 <div class="col-3"></div>
                 <div class="col-3">
                 <img class="img-fluid logo" src="assets/images/arsenal-logo.webp" alt="Arsenal football team logo" id="arsenal-logo">
@@ -57,16 +57,16 @@
                 </div>
                 <div class="col-3"></div>
             </div>
-            <div class="row">
-                <div class="col">
+            <div class="row text-center">
+                <div class="col txt-color-1">
                     <h1>Derby Duel</h1>
                     <p>So you think you know everything there is</p>
                     <p>to know about the North London Derby?</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row text-center">
                 <div class="col">
-                    <button type="button" class="btn btn-primary">Take Quiz</button>
+                    <button type="button" class="btn btn-primary txt-color-2">Take Quiz</button>
                 </div>
             </div>
         </div>
