style: main section styled

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
     </header>
     <section id="main-section">
         <div class="container-fluid">
-            <div class="row logo-row text-center">
-                <div class="col-3"></div>
+            <div class="row logo-row text-center align-items-center mb-5">
+                <div class="col-3 col-md-2"></div>
                 <div class="col-3">
                 <img class="img-fluid logo" src="assets/images/arsenal-logo.webp" alt="Arsenal football team logo" id="arsenal-logo">
                 </div>
+                <div class="d-none d-md-block col-md-2"></div>
                 <div class="col-3">
                 <img class="img-fluid logo" src="assets/images/spurs-logo.webp" alt="Tottenham Hotspurs team logo" id="spurs-logo">
                 </div>
-                <div class="col-3"></div>
+                <div class="col-3 col-md-2"></div>
             </div>
-            <div class="row text-center">
-                <div class="col txt-color-1">
+            <div class="row text-center mb-3">
+                <div class="txt-color-1">
                     <h1>Derby Duel</h1>
-                    <p>So you think you know everything there is</p>
-                    <p>to know about the North London Derby?</p>
+                    <p>So you think you know everything there is </br>to know about the North London Derby?</p>
                 </div>
             </div>
             <div class="row text-center">
