add: html structure for about section"

--- a/index.html
+++ b/index.html
@@ -64,9 +64,19 @@
                     <p>So you think you know everything there is </br>to know about the North London Derby?</p>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row text-center mb-5">
                 <div class="col">
                     <button type="button" class="btn btn-primary txt-color-2">Take Quiz</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="about-section">
+        <div class="container-fluid bg-color-1 txt-color-2 pt-5 pb-5">
+            <div class="row text-center">
+                <div class="col">
+                    <h2>About Derby Duel</h2>
+                    <p>Derby Duel is a trivia game to test your knowledge on the infamous North London Derby</p>
                 </div>
             </div>
         </div>
