--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@
             </div>
         </div>
     </section>
+    <section id="play-section">
+        <div class="container-fluid">
+            <div class="row text-center pt-5 pb-5">
+                <div class="col">
+                    <h2>How to Play</h2>
+                    <p>Play information goes here</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <!-- Bootstrap Script Tag -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
