--- a/index.html
+++ b/index.html
@@ -91,6 +91,38 @@
             </div>
         </div>
     </section>
+    <section id="form-section">
+        <div class="container-fluid bg-color-1 txt-color-2 pt-5 pb-5">
+            <div class="row">
+                <div class="col text-center">
+                <h2>Get in Touch</h2>
+                <p>We love to hear from our players.</p>
+                <p>Compliments or critique, we would love to know.</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="d-none d-md-block col-md-4"></div>
+                <div class="col-12 col-md-4 mt-3">
+                    <form>
+                        <div class="mb-3">
+                          <label for="name" class="form-label">Name:</label>
+                          <input type="text" class="form-control" id="name" aria-describedby="name">
+                        </div>
+                        <div class="mb-3">
+                          <label for="email" class="form-label">Email:</label>
+                          <input type="email" class="form-control" id="email">
+                        </div>
+                        <div class="mb-3">
+                            <label for="message" class="form-label">Message:</label>
+                            <textarea class="form-control" id="message" rows="3"></textarea>
+                          </div>
+                        <button type="submit" class="btn btn-primary">Submit</button>
+                      </form>
+                </div>
+                <div class="d-none d-md-block col-md-4"></div>
+            </div>
+        </div>
+    </section>
 
     <!-- Bootstrap Script Tag -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
