--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <section id="play-section">
         <div class="container-fluid">
             <div class="row text-center pt-5 pb-5">
-                <div class="col">
+                <div class="col txt-color-1">
                     <h2>How to Play</h2>
                     <p>Play information goes here</p>
                 </div>
@@ -125,7 +125,7 @@
     </section>
     <footer>
         <div class="container-fluid">
-            <div class="row pt-5 pb-5">
+            <div class="row pt-5 pb-5 txt-color-1">
                 <div class="col-12 col-md-6 mb-2">
                     <p>&copy Abby Humphreys 2023</p>
                 </div>
