--- a/index.html
+++ b/index.html
@@ -66,7 +66,11 @@
             </div>
             <div class="row text-center mb-5">
                 <div class="col">
-                    <button type="button" class="btn btn-primary txt-color-2">Take Quiz</button>
+                    <a href="game.html">
+                        <button type="button" class="btn btn-primary txt-color-2">
+                            Take Quiz
+                        </button>
+                    </a>
                 </div>
             </div>
         </div>
