--- a/game.html
+++ b/game.html
@@ -14,12 +14,12 @@
     <header>
         <nav class="navbar fixed-top">
             <div class="container-fluid">
-                <div class="col-11 text-center">
-                    <img class="img-fluid header-logo" src="assets/images/arsenal-header-logo.webp" alt="Arsenal football team logo" id="arsenal-logo">
-                    <h1 class="d-inline align-middle">Derby Duel</h1>
+                <div class="col-10 col-md-11 text-center">
+                    <img class="img-fluid header-logo pe-2" src="assets/images/arsenal-header-logo.webp" alt="Arsenal football team logo" id="arsenal-logo">
+                    <h1 class="d-inline align-middle pe-2">Derby Duel</h1>
                     <img class="img-fluid header-logo" src="assets/images/spurs-header-logo.webp" alt="Tottenham Hotspurs team logo" id="spurs-logo">
                 </div>
-                <div class="col-1 text-end">
+                <div class="col-2 col-md-1 text-end">
                 <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -52,7 +52,35 @@
             </div>
         </nav>
     </header>
-   
+    <hr class="first-border border border-danger border-1">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6">
+    <section class="question-section">
+        On Sol Campbell's first return to White Hart Lane after joining Arsenal, Spurs fans filled the stadium with balloons that had which word written on them?
+    </section>
+            </div>
+        </div>
+        <div class="col-12 col-md-6">
+            <div class="col-12">
+    <section class="answer-one">
+        Traitor
+    </section>
+            </div>
+            <div class="col-12">
+    <section class="answer-two">
+        Judas
+    </section>
+            </div>
+            <div class="col-12">
+    <section class="answer-three">
+        Loser
+    </section>
+            </div>
+        </div>
+</div>
+</div>
 
         <!-- Bootstrap Script Tag -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
