style: header section of answer section

--- a/game.html
+++ b/game.html
@@ -52,28 +52,32 @@
             </div>
         </nav>
     </header>
-    <hr class="first-border border border-danger border-1">
+    <hr class="first-border border border-danger border-1 mb-0">
     <div class="container-fluid">
         <div class="row">
-            <div class="col-12 col-md-6">
-            <div class="col-12 col-md-6">
+            <div class="col-12 col-md-6 border border-danger border-1">
+            <div class="col-12">
     <section class="question-section">
-        On Sol Campbell's first return to White Hart Lane after joining Arsenal, Spurs fans filled the stadium with balloons that had which word written on them?
+        <h2 class="text-end">Q1</h2>
+        <p>On Sol Campbell's first return to White Hart Lane after joining Arsenal, Spurs fans filled the stadium with balloons that had which word written on them?</p>
     </section>
             </div>
         </div>
-        <div class="col-12 col-md-6">
-            <div class="col-12">
+        <div class="col-12 col-md-6 p-0">
+            <div class="col-12 border border-danger border-1 bg-color-2 txt-color-2 ps-2">
+                <h2>SELECT YOUR ANSWER</h2>
+            </div>
+            <div class="col-12 border border-danger border-1 ps-2">
     <section class="answer-one">
         Traitor
     </section>
             </div>
-            <div class="col-12">
+            <div class="col-12 border border-danger border-1 ps-2">
     <section class="answer-two">
         Judas
     </section>
             </div>
-            <div class="col-12">
+            <div class="col-12 border border-danger border-1 ps-2">
     <section class="answer-three">
         Loser
     </section>
