--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar fixed-top">
+        <nav class="navbar">
             <div class="container-fluid">
                 <div class="col-10 col-md-11 text-center">
                     <img class="img-fluid header-logo pe-2" src="assets/images/arsenal-header-logo.webp" alt="Arsenal football team logo" id="arsenal-logo">
@@ -52,14 +52,13 @@
             </div>
         </nav>
     </header>
-    <hr class="first-border border border-danger border-1 mb-0">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 col-md-6 border border-danger border-1">
+        <div class="row vh-100">
+            <div class="col-12 col-md-6 border border-danger border-1 position-relative">
             <div class="col-12">
     <section class="question-section">
         <h2 class="text-end">Q1</h2>
-        <p>On Sol Campbell's first return to White Hart Lane after joining Arsenal, Spurs fans filled the stadium with balloons that had which word written on them?</p>
+        <p class="position-absolute question-paragraph">On Sol Campbell's first return to White Hart Lane after joining Arsenal, Spurs fans filled the stadium with balloons that had which word written on them?</p>
     </section>
             </div>
         </div>
