--- a/game.html
+++ b/game.html
@@ -84,6 +84,18 @@
         </div>
 </div>
 </div>
+<footer>
+    <div class="container-fluid">
+        <div class="row pt-5 pb-5 txt-color-1">
+            <div class="col-12 col-md-6 mb-2">
+                <p>&copy Abby Humphreys 2023</p>
+            </div>
+            <div class="col-12 col-md-6 text-md-end">
+                <p>Site created for educational purposes only</p>
+            </div>
+        </div>
+    </div>
+</footer>
 
         <!-- Bootstrap Script Tag -->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
