--- a/game.html
+++ b/game.html
@@ -53,7 +53,7 @@
         </nav>
     </header>
     <div class="container-fluid">
-        <div class="row vh-100">
+        <div class="row game-area">
             <div class="col-12 col-md-6 border border-danger border-1 position-relative">
             <div class="col-12">
     <section class="question-section">
