--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Derby Duel</title>
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Main Stylesheet -->
     <link href="assets/css/styles.css" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <nav class="navbar fixed-top">
             <div class="container-fluid justify-content-end">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
+                    aria-labelledby="offcanvasNavbarLabel">
                     <div class="offcanvas-header">
-                      <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
-                      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
                     <div class="offcanvas-body">
                         <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -50,11 +55,13 @@
             <div class="row logo-row text-center align-items-center mb-5">
                 <div class="col-3 col-md-2"></div>
                 <div class="col-3">
-                <img class="img-fluid logo" src="assets/images/arsenal-logo.webp" alt="Arsenal football team logo" id="arsenal-logo">
+                    <img class="img-fluid logo" src="assets/images/arsenal-logo.webp" alt="Arsenal football team logo"
+                        id="arsenal-logo">
                 </div>
                 <div class="d-none d-md-block col-md-2"></div>
                 <div class="col-3">
-                <img class="img-fluid logo" src="assets/images/spurs-logo.webp" alt="Tottenham Hotspurs team logo" id="spurs-logo">
+                    <img class="img-fluid logo" src="assets/images/spurs-logo.webp" alt="Tottenham Hotspurs team logo"
+                        id="spurs-logo">
                 </div>
                 <div class="col-3 col-md-2"></div>
             </div>
@@ -99,9 +106,9 @@
         <div class="container-fluid bg-color-1 txt-color-2 pt-5 pb-5">
             <div class="row">
                 <div class="col text-center">
-                <h2>Get in Touch</h2>
-                <p>We love to hear from our players.</p>
-                <p>Compliments or critique, we would love to know.</p>
+                    <h2>Get in Touch</h2>
+                    <p>We love to hear from our players.</p>
+                    <p>Compliments or critique, we would love to know.</p>
                 </div>
             </div>
             <div class="row">
@@ -109,19 +116,19 @@
                 <div class="col-12 col-md-4 mt-3">
                     <form>
                         <div class="mb-3">
-                          <label for="name" class="form-label">Name:</label>
-                          <input type="text" class="form-control" id="name" aria-describedby="name">
+                            <label for="name" class="form-label">Name:</label>
+                            <input type="text" class="form-control" id="name" aria-describedby="name">
                         </div>
                         <div class="mb-3">
-                          <label for="email" class="form-label">Email:</label>
-                          <input type="email" class="form-control" id="email">
+                            <label for="email" class="form-label">Email:</label>
+                            <input type="email" class="form-control" id="email">
                         </div>
                         <div class="mb-3">
                             <label for="message" class="form-label">Message:</label>
                             <textarea class="form-control" id="message" rows="3"></textarea>
-                          </div>
+                        </div>
                         <button type="submit" class="btn btn-primary">Submit</button>
-                      </form>
+                    </form>
                 </div>
                 <div class="d-none d-md-block col-md-4"></div>
             </div>
@@ -141,6 +148,9 @@
     </footer>
 
     <!-- Bootstrap Script Tag -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
