--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Main Stylesheet -->
     <link href="assets/css/styles.css" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -80,6 +81,7 @@
                 <div class="col-12 bg-color-2 txt-color-2 ps-2 h-25">
                     <h3>SELECT YOUR ANSWER</h3>
                 </div>
+                <div id="answer-boxes">
                 <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 answer">
                     <section class="answer-one">
                         Traitor
@@ -95,6 +97,7 @@
                         Loser
                     </section>
                 </div>
+            </div>
             </div>
         </div>
     </div>
@@ -129,6 +132,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
     </script>
+
+    <!-- game.js Script Tag -->
+    <script defer src="./assets/js/game.js"></script>
 </body>
 
 </html>
