--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <!-- Main Stylesheet -->
     <link href="assets/css/styles.css" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -74,7 +75,7 @@
             <div class="row text-center mb-5">
                 <div class="col">
                     <a href="game.html">
-                        <button type="button" class="btn btn-primary txt-color-2">
+                        <button type="button" class="btn btn-primary txt-color-2" id="start-btn">
                             Take Quiz
                         </button>
                     </a>
@@ -151,6 +152,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous">
     </script>
+
+    <!-- game.js Script Tag -->
+    <script defer src="./assets/js/game.js"></script>
 </body>
 
 </html>
