fix: some classes changed to id's for use in game.js

--- a/game.html
+++ b/game.html
@@ -102,7 +102,7 @@
                     <section class="question-section">
                         <h3 class="m-1">1/10 correct answers</h3>
                         <h2 class="text-end me-5">Q1</h2>
-                        <p class="position-absolute question-paragraph m-5">On Sol Campbell's first return to White Hart
+                        <p class="position-absolute m-5" id="question-paragraph">On Sol Campbell's first return to White Hart
                             Lane after joining Arsenal, Spurs fans filled the stadium with balloons that had which word
                             written on them?</p>
                         
@@ -115,13 +115,13 @@
                     <h3 class="select-answer">SELECT YOUR ANSWER</h3>
                 </div>
                 <div id="answer-boxes">
-                <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 answer answer-one">
+                <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 answer" id="answer-one">
                     <p>Traitor</p>
                 </div>
-                <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 answer answer-two">
+                <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 answer" id="answer-two">
                     <p>Judas</p>
                 </div>
-                <div class="col-12 ps-2 h-25 answer answer-three">
+                <div class="col-12 ps-2 h-25 answer" id="answer-three">
                     <p>Loser</p>
                 </div>
             </div>
