fix: refactored code for answer choices

--- a/game.html
+++ b/game.html
@@ -115,13 +115,13 @@
                     <h3 class="select-answer">SELECT YOUR ANSWER</h3>
                 </div>
                 <div id="answer-boxes">
-                <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 answer" id="answer-one">
+                <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 choice-text" data-number="1">
                     <p>Traitor</p>
                 </div>
-                <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 answer" id="answer-two">
+                <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 choice-text" data-number="2">
                     <p>Judas</p>
                 </div>
-                <div class="col-12 ps-2 h-25 answer" id="answer-three">
+                <div class="col-12 ps-2 h-25 choice-text" data-number="3">
                     <p>Loser</p>
                 </div>
             </div>
