fix: game area class names changed to id's for use in game.js

--- a/game.html
+++ b/game.html
@@ -47,7 +47,7 @@
         </div>
       </div>
     
-    <div class="game-display">
+    <div id="game-display">
     <header>
         <nav class="navbar">
             <div class="container-fluid">
@@ -128,14 +128,14 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid true-section hide">
+    <div class="container-fluid hide" id="true-section">
         <div class="row game-area">
             <div class="col d-flex align-items-center confirmation-text">
                 <p class="mx-auto">TRUE</p>
             </div>
         </div>
     </div>
-    <div class="container-fluid false-section hide">
+    <div class="container-fluid hide" id="false-section">
         <div class="row game-area">
             <div class="col d-flex align-items-center confirmation-text">
                 <p class="mx-auto">FALSE</p>
