add: counter element variable and display question counter function declared

--- a/game.html
+++ b/game.html
@@ -100,7 +100,7 @@
             <div class="col-12 col-md-6 border border-danger border-1 position-relative">
                 <div class="col-12">
                     <section class="question-section">
-                        <h3 class="m-1">1/10 correct answers</h3>
+                        <h3 class="m-1">1/10 questions</h3>
                         <h2 class="text-end me-5">Q1</h2>
                         <p class="position-absolute m-5" id="question-paragraph">On Sol Campbell's first return to White Hart
                             Lane after joining Arsenal, Spurs fans filled the stadium with balloons that had which word
