style: choice-text boxes

--- a/game.html
+++ b/game.html
@@ -118,20 +118,20 @@
                 </div>
 
                 <div class="col-12 col-md-6 p-0 border border-danger border-1 text-center">
-                    <div class="col-12 bg-color-2 txt-color-2 ps-2 h-15">
+                    <div class="col-12 bg-color-2 txt-color-2 ps-2 h-13 answer-section">
                         <h3 class="select-answer">SELECT YOUR ANSWER</h3>
                     </div>
-                    <div id="answer-boxes">
-                        <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 choice-text" data-number="1">
+                    
+                        <div class="col-12 border-bottom border-danger border-1 ps-2 h-29 choice-text" data-number="1">
                             <p>Traitor</p>
                         </div>
-                        <div class="col-12 border-bottom border-danger border-1 ps-2 h-25 choice-text" data-number="2">
+                        <div class="col-12 border-bottom border-danger border-1 ps-2 h-29 choice-text" data-number="2">
                             <p>Judas</p>
                         </div>
-                        <div class="col-12 ps-2 h-25 choice-text" data-number="3">
+                        <div class="col-12 ps-2 h-29 choice-text" data-number="3">
                             <p>Loser</p>
                         </div>
-                    </div>
+                    
                 </div>
             </div>
         </div>
