add: new header

--- a/game.html
+++ b/game.html
@@ -50,8 +50,86 @@
 
     <div id="game-display">
         <header>
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-12 col-md-6">
+                        <div class="row">
+                            <div class="col-2">
+                                <img class="img-fluid header-logo pe-2" src="assets/images/arsenal-header-logo.webp"
+                                alt="Arsenal football team logo" id="arsenal-logo">
+                            </div>
+                            <div class="col-8">
+                                <div class="row">
+                                    <div class="col-2">Played</div>
+                                    <div class="col-2">Won</div>
+                                    <div class="col-2">Drawn</div>
+                                    <div class="col-2">Lost</div>
+                                    <div class="col-2">Goals</div>
+                                    <div class="col-2">Points</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-2">0</div>
+                                    <div class="col-2">0</div>
+                                    <div class="col-2">0</div>
+                                    <div class="col-2">0</div>
+                                    <div class="col-2">0</div>
+                                    <div class="col-2">0</div>
+                                </div>
+                            </div>
+                            
+                            <div class="col-2">
+                                <img class="img-fluid header-logo" src="assets/images/spurs-header-logo.webp"
+                                alt="Tottenham Hotspurs team logo" id="spurs-logo">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <div class="row">
+                            <div class="col-9">
+                                <div class="row">
+                                    <div class="col-4">Match 1</div>
+                                    <div class="col-4">Match 2</div>
+                                    <div class="col-4"> Match 3</div>
+                                </div>
+                                <div class="row">
+                                    <div class="col-4">
+                                        <div class="row">
+                                            <div class="col-3">1</div>
+                                            <div class="col-3">2</div>
+                                            <div class="col-3">3</div>
+                                            <div class="col-3">4</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="row">
+                                            <div class="col-3">1</div>
+                                            <div class="col-3">2</div>
+                                            <div class="col-3">3</div>
+                                            <div class="col-3">4</div>
+                                        </div>
+                                    </div>
+                                    <div class="col-4">
+                                        <div class="row">
+                                            <div class="col-3">1</div>
+                                            <div class="col-3">2</div>
+                                            <div class="col-3">3</div>
+                                            <div class="col-3">4</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-3">
+                                <h6 class="d-inline align-middle pe-2">Derby Duel</h6>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!--
             <nav class="navbar">
                 <div class="container-fluid">
+                    
                     <div class="col-10 col-md-11 text-center">
                         <img class="img-fluid header-logo pe-2" src="assets/images/arsenal-header-logo.webp"
                             alt="Arsenal football team logo" id="arsenal-logo">
@@ -94,6 +172,8 @@
                     </div>
                 </div>
             </nav>
+            -->
+
         </header>
         <div class="container-fluid quiz-section">
             <div class="row game-area">
